<resources>
    <string name="app_name">Shop</string>
    <string name="home">خانه</string>
    <string name="grouping">دسته بندی</string>
    <string name="cart">سبد خرید</string>
    <string name="profile">پروفایل من</string>
    <string name="search_bar_hint">جستجو...</string>
    <string name="viewAll">مشاهده همه</string>
    <string name="latest">جدیدترین ها</string>
    <string name="product_title">عنوان کالا</string>
    <string name="product_pre_price">بهای پیشین کالا</string>
    <string name="product_current_price">بهای فعلی کالا</string>
    <string name="product_discount">تخفیف</string>
    <string name="detail_toolbar">جزییات کالا</string>
    <string name="detail_content">کتونی درجه ۲ ویتنامی است.این کالا برای رقابت با کتونیهای اورجینال حرف های خوبی برای اراعه دارد و از نظر دوام و مقاومت در برابر ساییدگی و ضربه با نمونه اورجینال خود قابل رقابت است. برای کسب اطلاعات بیشتر از این کالا و همچنین کالا های مشابه از این برند میتوانید وارد سایت نایک شوید</string>
    <string name="user_comments">دیدگاه کاربران</string>
    <string name="detail_all_comments">مشاهده تمامی دیدگاه ها</string>
    <string name="insert_comment">درج دیدگاه</string>
    <string name="comment_title">عنوان دیدگاه</string>
    <string name="comment_date">تاریخ دیدگاه</string>
    <string name="comment_author">نویسنده دیدگاه</string>
    <string name="comment_content">متن دیدگاه</string>
    <string name="base_toolbar">عنوان پایه</string>
    <string name="comment_list_toolbar">لیست دیدگاه ها</string>
    <string name="comment_list_btn">درج دیدگاه</string>
    <string name="list_toolbar">لیست کالاها</string>
    <string name="sort_by">مرتب سازی بر اساس</string>
    <string name="sort_latest">جدیدترین ها</string>
    <string name="sort_popular">پربازدید ترین ها</string>
    <string name="sort_price_desc">قیمت از بالا به پایین</string>
    <string name="sort_price_asc">قیمت از پایین به fالا</string>
    <string-array name="sortTitlesArray">
        <item>@string/sort_latest</item>
        <item>@string/sort_popular</item>
        <item>@string/sort_price_desc</item>
        <item>@string/sort_price_asc</item>
    </string-array>
    <string name="add_to_cart">افزودن به سبد خرید</string>
    <string name="add_to_cart_Message">کالا با موفقیت به سبد خرید اضافه شد</string>
    <string name="unknown_error">خطای نامشخص</string>
    <string name="go_to_sign_up">ثبت نام</string>
    <string name="no_sign_up">تا به حال ثبت نام نکرده اید؟</string>
    <string name="login">ورود</string>
    <string name="email">ایمیل</string>
    <string name="password">گذرواژه</string>
    <string name="login_title">صفحه ورود به حساب کاربری</string>
    <string name="go_to_login">ورود</string>
    <string name="sign_up_before">قبلا ثبت نام کرده اید؟</string>
    <string name="sign_up_title1">به فروشگاه اینترنتی خوش آمدید</string>
    <string name="sign_up_title2">لطفا ثبت نام فرمایید</string>
    <string name="cart_toolbar">سبد خرید</string>
    <string name="pay_btn">پرداخت</string>
    <string name="counter">۲</string>
    <string name="remove">حذف از سبد خرید</string>
    <string name="purchase_details">جزییات خرید</string>
    <string name="total_price">هزینه کل خرید</string>
    <string name="shipping_cost">هزینه ارسال</string>
    <string name="payable_price">هزینه قابل پرداخت</string>
    <string name="cart_empty_state_login">لطفا وارد حساب کاردبری خود شوید</string>
    <string name="cart_empty_state_call_to_action_login">ورود به حساب کاربری</string>
    <string name="cart_empty_state_message">اینجا هیچ خبری نیست !!!</string>
    <string name="comment_empty_state_message">اولین نفری باشید که دیدگاهی می نویسد !!!</string>
</resources>