<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="12dp"
    android:layout_marginTop="6dp"
    android:layout_marginRight="12dp"
    android:layout_marginBottom="6dp"
    android:backgroundTint="?android:colorBackground"
    app:cardCornerRadius="4dp"
    app:cardElevation="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="16dp"
            android:adjustViewBounds="true"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@drawable/ic_launcher_foreground" />

        <TextView
            android:id="@+id/title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="12dp"
            android:layout_marginRight="12dp"
            android:ellipsize="end"
            android:maxLines="4"
            android:minLines="1"
            android:textAppearance="@style/TextAppearance.MyTheme.Body2"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/image"
            app:layout_constraintTop_toTopOf="@id/image"
            tools:text="@string/product_title" />

        <TextView
            android:id="@+id/counter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintLeft_toLeftOf="@id/image"
            app:layout_constraintRight_toRightOf="@id/image"
            app:layout_constraintTop_toBottomOf="@id/image"
            tools:text="@string/counter" />

        <ProgressBar
            android:id="@+id/counterProgressBar"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@id/counter"
            app:layout_constraintLeft_toLeftOf="@id/counter"
            app:layout_constraintRight_toRightOf="@id/counter"
            app:layout_constraintTop_toTopOf="@id/counter" />

        <ImageView
            android:id="@+id/increaser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:src="@drawable/outline_add_box_24"
            app:layout_constraintBottom_toBottomOf="@id/counter"
            app:layout_constraintLeft_toRightOf="@id/counter"
            app:layout_constraintTop_toTopOf="@id/counter" />

        <ImageView
            android:id="@+id/decreaser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="12dp"
            android:src="@drawable/outline_minus_box_24"
            app:layout_constraintBottom_toBottomOf="@id/counter"
            app:layout_constraintRight_toLeftOf="@id/counter"
            app:layout_constraintTop_toTopOf="@id/counter" />

        <TextView
            android:id="@+id/previousPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:maxLines="2"
            android:minLines="2"
            android:textAppearance="?textAppearanceCaption"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/decreaser"
            tools:text="@string/product_pre_price" />

        <TextView
            android:id="@+id/currentPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:textAppearance="?textAppearanceBody2"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/previousPrice"
            tools:text="@string/product_current_price" />

        <View
            android:id="@+id/view8"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="16dp"
            android:background="?dividerColor"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/currentPrice" />

        <TextView
            android:id="@+id/remove"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/remove"
            android:textAppearance="?textAppearanceCaption"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view8" />

        <ProgressBar
            android:id="@+id/removeProgressBar"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@id/remove"
            app:layout_constraintLeft_toLeftOf="@id/remove"
            app:layout_constraintRight_toRightOf="@id/remove"
            app:layout_constraintTop_toTopOf="@id/remove" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>